# cmdtrainer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.txt  Plans.md  README.dev.md  README.md  cmdtrainer  pyproject.toml
docs/: spaced-repetition.md
src/cmdtrainer/: __init__.py  __main__.py  content_loader.py  main.py  models.py  progress.py  service.py
src/cmdtrainer/content/modules/: apt.json  archive-tools.json  base-linux.json  docker-compose.json  docker-context.json  docker-image.json  docker-network.json  docker-volume.json  docker.json  file-tools.json  git.json  http-clients.json  network-basics.json  node-release.json  node.json  npm-workspaces.json  npm.json  process-tools.json  ssh.json  tmux.json
tests/: conftest.py  test_content_loader.py  test_content_loader_edges.py  test_entrypoints.py  test_main.py  test_module_content_baseline.py  test_progress.py  test_service.py  test_service_normalization.py  test_version.py
tests/fixtures/: profile_export_v1_0_0.json
