[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdtrainer"
version = "1.1.0"
description = "CLI tool for safe command-line learning and practice"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0,<10.0",
  "pytest-cov>=5.0,<6.0",
  "black>=26.0,<27.0",
  "ruff>=0.15,<0.16",
  "pyright>=1.1,<1.2"
]

[project.scripts]
cmdtrainer = "cmdtrainer.main:main_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cmdtrainer = ["content/modules/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=cmdtrainer --cov-report=term-missing --cov-fail-under=95 -p no:cacheprovider -p no:tmpdir"

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
reportMissingTypeStubs = false

[[tool.pyright.executionEnvironments]]
root = "src"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportArgumentType = "none"
reportIncompatibleMethodOverride = "none"
reportMissingImports = "none"
reportMissingParameterType = "none"
reportPrivateUsage = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"

